--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -20,7 +20,7 @@
     "sub": "We have several videogames but we are focused on working on Mech Infinity, a Battle Royale within the Axie Infinity universe"
   },
   "team": {
-    "title": "Equipo",
+    "title": "Team",
     "sub": "The best games come from the best teams"
   }
 }
