--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -1,177 +1,38 @@
 {
-  "name": "Nombre",
-  "accept": "Aceptar",
-  "cancel": "Cancelar",
-  "insert": "Insertar",
-  "edit": "Editar",
-  "delete": "Eliminar",
-  "country": "País",
-  "countries": "Países",
-  "province": "Provincia",
-  "provinces": "Provincias",
-  "municipality": "Municipio",
-  "municipalities": "Municipios",
-  "grant": "Ayuda",
-  "grants": "Ayudas",
-  "spanish": "Español",
-  "es": "ES",
-  "eu": "EU",
-  "person": "Persona",
-  "company": " Empresa",
-  "successAction": "Acción realizada con éxito",
-  "errorAction": "Ha ocurrido un error",
-  "euskeraName": "Nombre (EU)",
-  "spanishName": "Nombre (ES)",
-  "descriptionSpanish": "Descripción (ES)",
-  "descriptionEuskera": "Descripción (EU)",
-  "requester": "Solicitante",
-  "requesters": "Solicitantes",
-  "requests": "Solicitudes",
-  "request": "Solicitud",
-  "correction": "Subsanación",
-  "documentCategories": "Categorías de documentos",
-  "documentCategory": "Categoría de documento",
-  "all": "Ambas",
-  "yes": "Sí",
-  "no": "No",
-  "home": "Inicio",
-  "seeAll": "Ver todo",
-  "configuration": "Configuración",
-  "date": "Fecha",
-  "export": "Exportar",
-  "required": "Requerido",
-  "none": "Ninguno",
-  "phone": "Teléfono",
-  "pagination": {
-    "page": "Página",
-    "pages": "Páginas",
-    "of": "de",
-    "totalEntries": "Total de entradas",
-    "show": "Mostrar"
+  "contact": "Contact Us",
+  "heading": {
+    "art": "Art",
+    "creativity": "Creativity",
+    "entertainment": "Entertainment",
+    "sub": "Every person has dreams, we can help you to fulfill yours working with us"
+  },
+  "culture": {
+    "title": "Our Culture",
+    "sub": "Make a videogame in which users are real owners of their assets, are rewarded for their effort and time spent playing the game"
+  },
+  "premises": {
+    "title": "Premises",
+    "title1": "Games",
+    "title2": "Economy",
+    "title3": "Competitive",
+    "text1": "First and foremost a videogame should be fun and enjoyable",
+    "text2": "The balance in blockchain videogame economics must be meticulously careful",
+    "text3": "We believe that eSports are and will be the driving force in the industry and thats why our videogames are design to be highly competitive"
+  },
+  "games": {
+    "title": "Games",
+    "sub": "We have several videogames but we are focused on working on Mech Infinity, a Battle Royale within the Axie Infinity universe"
+  },
+  "team": {
+    "title": "Team",
+    "sub": "The best games come from the best teams"
   },
   "routes": {
-    "home": "Inicio",
-    "countries": "Países",
-    "provinces": "Provincias",
-    "municipalities": "Municipios",
-    "grants": "Ayudas",
-    "lopd": "LOPD",
-    "requesters": "Solicitantes",
-    "requests": "Solicitudes",
-    "export": "Exportar",
-    "documentCategories": "Categorías de Documentos"
+    "home": "Home",
+    "team": "Team",
+    "news": "News"
   },
-  "grantForm": {
-    "name": "Nombre",
-    "nameSpanish": "Nombre en español",
-    "nameEuskera": "Nombre en euskera",
-    "descriptionSpanish": "Descripción",
-    "descriptionEuskera": "Descripción",
-    "shortDescriptionSpanish": "Descripción corta",
-    "shortDescriptionEuskera": "Descripción corta",
-    "relatedDocumentsSpanish": "Documentos relacionados",
-    "relatedDocumentsEuskera": "Documentos relacionados",
-    "grantDocuments": "Documentos de la ayuda",
-    "technicalSupport": "Soporte Técnico",
-    "endDate": "Fecha de fin",
-    "relatedLinks": "Enlaces relacionados",
-    "type": "Tipo de ayuda",
-    "mainImage": "Imagen principal",
-    "sponsorsImage": "Imagen de financiadores",
-    "noGrantDocuments": "Debe insertar la ayuda para poder agregar los documentos",
-    "emptyGrantDocuments": "No hay documentos",
-    "tabs": {
-      "general": "Configuración",
-      "spanish": "ES",
-      "euskera": "EU",
-      "grantDocuments": "Documentos"
-    }
-  },
-  "uploadFile": "Subir archivo",
-  "uploadFiles": "Subir archivos",
-  "lopd": "LOPD",
-  "lopdForm": {
-    "textSpanish": "Texto en español",
-    "textEuskera": "Texto en euskera"
-  },
-  "filterForm": {
-    "filter": "Filtrar",
-    "field": "Campo",
-    "operator": "Operador",
-    "value": "Valor",
-    "apply": "Aplicar"
-  },
-  "operators": {
-    "$eq": "Igual a",
-    "$containsi": "Contiene a"
-  },
-  "loginForm": {
-    "accessAccount": "Acceder a la cuenta",
-    "email": "Correo de usuario",
-    "password": "Contraseña",
-    "access": "Acceder"
-  },
-  "logout": "Cerrar sesión",
-  "requesterView": {
-    "requesterDetail": "Detalles del Solicitante",
-    "name": "Nombre",
-    "lastName": "Apellido",
-    "email": "Correo",
-    "dni": "DNI",
-    "phone": "Teléfono",
-    "organization": "Organización",
-    "type": "Tipo",
-    "bussinesName": "Negocio",
-    "requests": "Solicitudes"
-  },
-  "requestView": {
-    "requestDetail": "Detalles de la Solicitud",
-    "fullName": "Nombre completo",
-    "email": "Correo",
-    "nif": "NIF",
-    "postalCode": "Código postal",
-    "type": "Tipo",
-    "addressLine": "Dirección",
-    "addressLineComplement": "Otros datos de la dirección",
-    "status": "Estado",
-    "rejectReasons": "Razones de rechazo",
-    "representativeData": "Datos del representante",
-    "requesterData": "Solicitante",
-    "representativeContactPerson": "Persona de contacto",
-    "representativeIAE": "IAE",
-    "representativeName": "Nombre",
-    "documents": "Documentos",
-    "representation": "Representante",
-    "info": "Solicitud",
-    "communications": "Comunicaciones",
-    "corrections": "Subsanaciones",
-    "states": {
-      "draft": "Borrador",
-      "sended": "Enviada",
-      "correction": "Subsanación",
-      "approved": "Aprobada",
-      "rejected": "Rechazada"
-    }
-  },
-  "correctionsView": {
-    "info": "Información de subsanación",
-    "subject": "Asunto",
-    "text": "Texto",
-    "attachments": "Adjuntos",
-    "origin": "Origen",
-    "agent": "Agente",
-    "requester": "Solicitante",
-    "attachFile": "Adjuntar archivo"
-  },
-  "exportView": {
-    "collection": "Colección",
-    "start": "Saltar elementos",
-    "limit": "Cantidad de elementos"
-  },
-  "validations": {
-    "required": "El campo es requerido",
-    "email": "El campo debe ser un email válido",
-    "errors": "Han ocurrido {{errors}} errores en los datos del formulario. Revise las secciones para arreglarlos.",
-    "fileTooLarge": "El archivo no puede ser mayor a {{size}} MB"
+  "news": {
+    "title": "News"
   }
 }
