--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -20,7 +20,7 @@
     "text3": "We believe that eSports are and will be the driving force in the industry and thats why our videogames are design to be highly competitive"
   },
   "games": {
-    "title": "Games",
+    "title": "Web3 Games",
     "sub": "We have several videogames but we are focused on working on Mech Infinity, a Battle Royale within the Axie Infinity universe"
   },
   "team": {
@@ -34,5 +34,8 @@
   },
   "news": {
     "title": "News"
+  },
+  "web2": {
+    "title": "Web 2.0 Games"
   }
 }
